@@ -15,6 +15,10 @@
     <javafx.version>24.0.1</javafx.version>
   </properties>
 
+  <options>
+    <option>--add-modules</option>
+    <option>javafx.controls,javafx.fxml,javafx.web</option>
+  </options>
   <dependencies>
     <!-- JavaFX core modules -->
     <dependency>
@@ -61,6 +65,15 @@
             <option>--add-modules</option>
             <option>javafx.controls,javafx.fxml,javafx.web</option>
           </options>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
         </configuration>
       </plugin>
     </plugins>
